<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:orientation="vertical">

        <TextView
            android:id="@+id/time"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/h50"
            android:layout_marginTop="@dimen/h40"
            android:gravity="center"
            android:text=""
            android:textColor="@color/theme"
            android:textSize="@dimen/w32" />


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/h90"
            android:layout_marginTop="@dimen/h30"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/w30"
            android:paddingRight="@dimen/w30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:id="@+id/detail_data1"
                android:textSize="@dimen/w30" />

            <TextView
                android:id="@+id/detail_data1_value"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="--"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/h90"
            android:layout_marginTop="@dimen/h30"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/w30"
            android:paddingRight="@dimen/w30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:id="@+id/detail_data2"
                android:textSize="@dimen/w30" />

            <TextView
                android:id="@+id/detail_data2_value"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="--"
                android:visibility="visible" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/h90"
            android:layout_marginTop="@dimen/h30"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/w30"
            android:id="@+id/detail_layout3"
            android:paddingRight="@dimen/w30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:id="@+id/detail_data3"
                android:textSize="@dimen/w30" />

            <TextView
                android:id="@+id/detail_data3_value"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="--"
                android:visibility="visible" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/h90"
            android:layout_marginTop="@dimen/h30"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/w30"
            android:id="@+id/detail_layout4"
            android:paddingRight="@dimen/w30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:id="@+id/detail_data4"
                android:textSize="@dimen/w30" />

            <TextView
                android:id="@+id/detail_data4_value"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="--"
                android:visibility="visible" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/h90"
            android:layout_marginTop="@dimen/h50"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/w30"
            android:paddingRight="@dimen/w30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/alert_set"
                android:textSize="@dimen/w30" />

            <ImageView
                android:id="@+id/kai_guan"
                android:layout_width="@dimen/w122"
                android:layout_height="@dimen/w53"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/rb_checked"
                android:visibility="visible" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/h90"
            android:layout_marginTop="@dimen/h30"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/w30"
            android:paddingRight="@dimen/w30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/left_power"
                android:textSize="@dimen/w30" />

            <TextView
                android:id="@+id/power"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="--"
                android:visibility="visible" />

        </RelativeLayout>

        <TextView
            android:id="@+id/view_history_data"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/h90"
            android:layout_marginLeft="@dimen/w20"
            android:layout_marginRight="@dimen/w20"
            android:layout_marginTop="@dimen/h40"
            android:background="@drawable/common_button_bg"
            android:gravity="center"
            android:text="@string/search_history_data"
            android:textSize="@dimen/w34" />


    </LinearLayout>
</ScrollView>